# hello-stranger-backend

./: README.md  cabal.project  flake.nix  hello-stranger-backend.cabal  hie.yaml
.github/workflows/: CI.yaml
test/: Spec.hs
