cabal-version:   2.4
name:            hello-stranger-backend
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          José María Landa Chávez
maintainer:      José María Landa Chávez <josemaria.landa@gmail.com>
copyright:       2022 José María Landa Chávez
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/hello-stranger-backend#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/hello-stranger-backend.git

common common-options
  build-depends:    base >=4.9 && <5
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Lib
  build-depends:
    , containers
    , mtl

executable hello-stranger-backend-exe
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  hello-stranger-backend
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite hello-stranger-backend-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , hspec
    , HUnit
    , hello-stranger-backend
    , QuickCheck

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark hello-stranger-backend-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , criterion
    , hello-stranger-backend

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
